<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroniX Extended Menu</string>
    <string name="webserver">WebServer</string>
    <string name="about">About</string>
    <string name="webserverStarted">WebServer started</string>
    <string name="webserverStopped">Webserver stopped</string>
    <string name="sshStarted">SSH started</string>
    <string name="sshStopped">SSH stopped</string>
    <string name="createdBy">Created by Ivan Morgillo</string>
    <string name="error">Something went wrong</string>
    <string name="addIcon">fix completed</string>
    <string name="rmIcon">fix completed</string>

    <!-- SSH password change activity -->
    <string name="ssh_oldpassword_textview">Old SSH password</string>
    <string name="ssh_newpassword_textview">New SSH password</string>
    <string name="ssh_password_change_button">Change!</string>
    <string name="ssh_password_reset_button">Reset!</string>
    <string name="ssh_password_change_success">Password successfully changed to:</string>
    <string name="ssh_password_notmatching">Password does not match</string>
    <string name="ssh_password_empty">Empty fields?! Really!?</string>

    <!-- Menu -->
    <string name="ssh_password_change_menuitem">Change SSH password</string>
    <string name="ssh_password_change_menuitem_label">Choose a new SSH password</string>
    <string name="ssh_password_dialog_title">Edit password</string>
    <string name="about_menuitem">About</string>
    <string name="exit_menuitem">Exit</string>
    <string name="set_preferences">Set preferences</string>
    <string name="theme_switcher">Theme Switcher</string>
    <string name="theme_switcher_des">Change style ideos</string>
    <string name="theme">Change theme on ideos</string>
    <string name="icon_switcher">Icon Switcher</string>
    <string name="icon_switcher_des">Change icon on ideos</string>

    <string name="ssh_start_stop">Start or stop SSH server</string>
    <string name="webserver_start_stop">Start or stop Web server</string>

    <string name="data_ic">Enable or disable data icon on notify bar (Ideos only)</string>

    <string name="custom_script">Run a custom script</string>
    <string name="authors">Authors</string>
    <string name="custom_script_usage">
        Put a bash script named custom.sh in /mnt/sdcard/dronix/custom_script.sh
        and click the button below. DroniX will run your script.
        Be careful!
    </string>
    <string name="run">Run</string>
    <string name="kernel_settings">Kernel settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="wise_decision">Wise decision!</string>
    <string name="kernel_standard_flashed">DroniX Standard Kernel has been flashed</string>
    <string name="kernel_usbhost_flashed">DroniX USB Host Kernel has been flashed</string>
    <string name="theme_switcher_set_generic_reboot">Set new theme and reboot framework</string>
    <string name="icon_switcher_set_generic_reboot">Set new icon and reboot framework</string>
    <string name="theme_switcher_set_default_reboot">Set default theme and reboot framework</string>
    <string name="theme_switcher_set_04_reboot">Set DroniX 0.4 theme and reboot framework</string>
    <string name="theme_switcher_set_ginger_reboot">Set Ginger theme and reboot framework</string>
    <string name="theme_switcher_set_sense_reboot">Set Sense theme and reboot framework</string>
    <string name="theme_switcher_set_custom_reboot">Set custom theme and reboot framework</string>
</resources>
