<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
       <PreferenceCategory
                android:title="@string/theme_switcher">
           <Preference
               android:title="@string/theme_switcher"
               android:summary="@string/theme"
               android:key="theme_switch">
               <intent
                   android:action="android.intent.action.MAIN"
                   android:targetPackage="org.dronix.android.dronixextendedmenu"
                   android:targetClass="org.dronix.android.dronixextendedmenu.ThemeSwitcherActivity"
                   />
           </Preference>
           <Preference
               android:title="@string/icon_switcher"
               android:summary="@string/icon_switcher_des"
               android:key="icon_switcher">
               <intent
                   android:action="android.intent.action.MAIN"
                   android:targetPackage="org.dronix.android.dronixextendedmenu"
                   android:targetClass="org.dronix.android.dronixextendedmenu.IconSwitcherActivity"
                   />
           </Preference>
        </PreferenceCategory>
</PreferenceScreen>