<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_name">
        <CheckBoxPreference
            android:title="SSH"
            android:defaultValue="false"
            android:summary="@string/ssh_start_stop"
            android:key="ssh_checkbox_preference" />
        <Preference
            android:title="@string/ssh_password_change_menuitem"
            android:summary="@string/ssh_password_change_menuitem_label"
            android:key="ssh_password">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.dronix.android.dronixextendedmenu"
                android:targetClass="org.dronix.android.dronixextendedmenu.SSHpasswordChange" />
        </Preference>
        <CheckBoxPreference
            android:title="WebServer"
            android:defaultValue="false"
            android:summary="@string/webserver_start_stop"
            android:key="webserver_checkbox_preference" />
        <CheckBoxPreference
                   android:title="DataIcon"
                   android:defaultValue="false"
                   android:summary="@string/data_ic"
                   android:key="data_icon_checkbox_preference" />
        <Preference
            android:title="@string/kernel_settings"
            android:key="kernels">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.dronix.android.dronixextendedmenu"
                android:targetClass="org.dronix.android.dronixextendedmenu.Kernels" />
        </Preference>
        <Preference
            android:title="@string/custom_script"
            android:key="custom_script">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.dronix.android.dronixextendedmenu"
                android:targetClass="org.dronix.android.dronixextendedmenu.CustomScript" />
        </Preference>
        <Preference
            android:title="@string/authors"
            android:key="authors">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.dronix.android.dronixextendedmenu"
                android:targetClass="org.dronix.android.dronixextendedmenu.Authors" />
        </Preference>
<!--        <ListPreference
            android:title="List Preference"
            android:summary="This preference allows to select an item in a array"
            android:key="listPref"
            android:defaultValue="digiGreen"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />-->
    </PreferenceCategory>
    <!--<PreferenceCategory
        android:title="Second Category">-->
<!--        <EditTextPreference
            android:name="EditText Preference"
            android:summary="This allows you to enter a string"
            android:defaultValue="Nothing"
            android:title="Edit This Text"
            android:key="editTextPref" />-->
        <!--<RingtonePreference
            android:name="Ringtone Preference"
            android:summary="Select a ringtone"
            android:title="Ringtones"
            android:key="ringtonePref" />-->
        <!--<PreferenceScreen
            android:key="SecondPrefScreen"
            android:title="Second PreferenceScreen"
            android:summary="This is a second PreferenceScreen">
            <EditTextPreference
                android:name="An other EditText Preference"
                android:summary="This is a preference in the second PreferenceScreen"
                android:title="Edit text"
                android:key="SecondEditTextPref" />
        </PreferenceScreen>-->
        <!--<Preference
            android:title="Custom Preference"
            android:summary="This works almost like a button"
            android:key="customPref" />-->
    <!--</PreferenceCategory>-->
</PreferenceScreen>